# autoresearch-molgen

./: .gitignore  README.md  analysis_mol.ipynb  molecule_adaptation.md  prepare_mol.py  program.md  program_mol.md  pyproject.toml  qm9_benchmark.md  train_mol.py  train_mol_mlx.py
