[project]
name = "autoresearch-molgen"
version = "0.1.0"
description = "Autonomous research loop for 3D molecule generation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mlx>=0.31.0; platform_system == 'Darwin' and platform_machine == 'arm64'",
    "numpy>=2.2.6",
    "requests>=2.32.0",
    "torch==2.9.1; platform_system != 'Darwin' or platform_machine == 'arm64'",
    "torch==2.2.2; platform_system == 'Darwin' and platform_machine == 'x86_64'",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128", marker = "platform_system == 'Linux'" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
